--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
    
     <title>mypage</title>
-    <script type="text/javascript" src="//at.alicdn.com/t/font_434101_4yodl72spn7phkt9.js"></script>>
+    <script type="text/javascript" src="//at.alicdn.com/t/font_434101_03dxgkcjp6nu3di.js"></script>
   </head>
   <body>
     <div id="app"></div>
