--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
    
     <title>mypage</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <script type="text/javascript" src="//at.alicdn.com/t/font_434101_03dxgkcjp6nu3di.js"></script>
   </head>
   <body>
